add styles to html

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
   <body>
     <main class="container">
       <!-- Kartička uživatele -->
-      <div>
+      <div class="karta">
         <!-- Dostupnost a cena -->
         <div>
-         <span>300 Kč/h</span>
-         <span>K dispozici</span>
+         <span class="cena">300 Kč/h</span>
+         <span class="dostupny">K dispozici</span>
         </div>
         <!-- Obrázek uživatele -->
          <div>
-           <img src="./images/avatar.jpg" alt="User Avatar">
+           <img class="kulata-fotka" src="./images/avatar.jpg" alt="User Avatar">
          </div>
          <!-- Informace o uživateli -->
-         <div>
-           <h2>Adéla Kódová</h2>
-           <p>Programátorka juniroka se zájmem o webový vývoj. <a href="#s">Přejít na profil</a></p>
+         <div class="text">
+           <h2 class="nadpis">Adéla Kódová</h2>
+           <p class="popis-uzivatele">Programátorka juniroka se zájmem o webový vývoj. <a href="#s">Přejít na profil</a></p>
            <!-- Koníčky -->
-           <ul>
+           <ul class="konicky">
              <li>
                Stylování
              </li>
@@ -35,28 +35,28 @@
          </div>
          <!-- Tlačítka s odkazy -->
          <div>
-           <button>Twitter</button>
-           <button>Facebook</button>
-           <button>Instagram</button>
+           <button class="tlacitko twitter">Twitter</button>
+           <button class="tlacitko facebook">Facebook</button>
+           <button class="tlacitko">Instagram</button>
          </div>
       </div>
        <!-- Kartička uživatele -->
-      <div>
+      <div class="karta">
         <!-- Dostupnost a cena -->
         <div>
-         <span>400 Kč/h</span>
-         <span>Nedostupný</span>
+         <span class="cena">400 Kč/h</span>
+         <span class="nedostupny">Nedostupný</span>
         </div>
         <!-- Obrázek uživatele -->
          <div>
-           <img src="./images/avatar2.jpg" alt="User Avatar">
+           <img class="kulata-fotka" src="./images/avatar2.jpg" alt="User Avatar">
          </div>
          <!-- Informace o uživateli -->
-         <div>
-           <h2>Pavel Outdoorový</h2>
-           <p>Nadšený dobrodruh a průvodce horskou turistikou. <a href="#s">Přejít na profil</a></p>
+         <div class="text">
+           <h2 class="nadpis">Pavel Outdoorový</h2>
+           <p class="popis-uzivatele">Nadšený dobrodruh a průvodce horskou turistikou. <a href="#s">Přejít na profil</a></p>
            <!-- Koníčky -->
-           <ul>
+           <ul class="konicky">
              <li>
                Stylování
              </li>
@@ -67,9 +67,9 @@
          </div>
          <!-- Tlačítka s odkazy -->
          <div>
-           <button>Twitter</button>
-           <button>Facebook</button>
-           <button>Instagram</button>
+           <button class="tlacitko twitter">Twitter</button>
+           <button class="tlacitko facebook">Facebook</button>
+           <button class="tlacitko instagram">Instagram</button>
          </div>
       </div>
     </main>
