--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
   <body>
     <main class="container">
       <!-- Kartička uživatele -->
-      <div class="karta">
+      <div class="user">
         <!-- Dostupnost a cena -->
-        <div>
-         <span class="cena">300 Kč/h</span>
-         <span class="dostupny">K dispozici</span>
+        <div class="user__status">
+         <span class="user__price">300 Kč/h</span>
+         <span class="user__aviability user__aviability--enable">K dispozici</span>
         </div>
         <!-- Obrázek uživatele -->
-         <div>
-           <img class="kulata-fotka" src="./images/avatar.jpg" alt="User Avatar">
+         <div class="user__avatar">
+           <img src="./images/avatar.jpg" alt="User Avatar">
          </div>
          <!-- Informace o uživateli -->
-         <div class="text">
-           <h2 class="nadpis">Adéla Kódová</h2>
-           <p class="popis-uzivatele">Programátorka juniroka se zájmem o webový vývoj. <a href="#s">Přejít na profil</a></p>
+         <div class="user__info">
+           <h2 class="user__title">Adéla Kódová</h2>
+           <p class="user__description">Programátorka juniroka se zájmem o webový vývoj. <a href="#s">Přejít na profil</a></p>
            <!-- Koníčky -->
-           <ul class="konicky">
+           <ul class="user__hobby">
              <li>
                Stylování
              </li>
@@ -35,28 +35,28 @@
          </div>
          <!-- Tlačítka s odkazy -->
          <div>
-           <button class="tlacitko twitter">Twitter</button>
-           <button class="tlacitko facebook">Facebook</button>
-           <button class="tlacitko">Instagram</button>
+           <button class="user__button user__button--twitter">Twitter</button>
+           <button class="user__button user__button--facebook">Facebook</button>
+           <button class="user__button user__button--instagram">Instagram</button>
          </div>
       </div>
        <!-- Kartička uživatele -->
-      <div class="karta">
+      <div class="user">
         <!-- Dostupnost a cena -->
-        <div>
-         <span class="cena">400 Kč/h</span>
-         <span class="nedostupny">Nedostupný</span>
+        <div class="user__status">
+         <span class="user__price">400 Kč/h</span>
+         <span class="user__aviability user__aviability--disable">Nedostupný</span>
         </div>
         <!-- Obrázek uživatele -->
-         <div>
-           <img class="kulata-fotka" src="./images/avatar2.jpg" alt="User Avatar">
+         <div class="user__avatar">
+           <img src="./images/avatar2.jpg" alt="User Avatar">
          </div>
          <!-- Informace o uživateli -->
-         <div class="text">
-           <h2 class="nadpis">Pavel Outdoorový</h2>
+         <div class="user__info">
+           <h2 class="user__title">Pavel Outdoorový</h2>
            <p class="popis-uzivatele">Nadšený dobrodruh a průvodce horskou turistikou. <a href="#s">Přejít na profil</a></p>
            <!-- Koníčky -->
-           <ul class="konicky">
+           <ul class="user__hobby">
              <li>
                Stylování
              </li>
@@ -67,9 +67,9 @@
          </div>
          <!-- Tlačítka s odkazy -->
          <div>
-           <button class="tlacitko twitter">Twitter</button>
-           <button class="tlacitko facebook">Facebook</button>
-           <button class="tlacitko instagram">Instagram</button>
+           <button class="user__button user__button--twitter">Twitter</button>
+           <button class="user__button user__button--facebook">Facebook</button>
+           <button class="user__button user__button--instagram">Instagram</button>
          </div>
       </div>
     </main>
