--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
            <h2 class="user__title">Adéla Kódová</h2>
            <p class="user__description">Programátorka juniroka se zájmem o webový vývoj. <a href="#s">Přejít na profil</a></p>
            <!-- Koníčky -->
-           <ul class="user__hobby">
-             <li>
+           <ul class="user__hobbies">
+             <li class="user__hobby">
                Stylování
              </li>
-             <li>
+             <li class="user__hobby">
                Flexbox
              </li>
            </ul>
          </div>
          <!-- Tlačítka s odkazy -->
-         <div>
+         <div class="user__buttons">
            <button class="user__button user__button--twitter">Twitter</button>
            <button class="user__button user__button--facebook">Facebook</button>
            <button class="user__button user__button--instagram">Instagram</button>
@@ -54,19 +54,19 @@
          <!-- Informace o uživateli -->
          <div class="user__info">
            <h2 class="user__title">Pavel Outdoorový</h2>
-           <p class="popis-uzivatele">Nadšený dobrodruh a průvodce horskou turistikou. <a href="#s">Přejít na profil</a></p>
+           <p class="user__description">Nadšený dobrodruh a průvodce horskou turistikou. <a href="#s">Přejít na profil</a></p>
            <!-- Koníčky -->
-           <ul class="user__hobby">
-             <li>
+           <ul class="user__hobbies">
+             <li class="user__hobby">
                Stylování
              </li>
-             <li>
+             <li class="user__hobby">
                Flexbox
              </li>
            </ul>
          </div>
          <!-- Tlačítka s odkazy -->
-         <div>
+         <div class="user__buttons">
            <button class="user__button user__button--twitter">Twitter</button>
            <button class="user__button user__button--facebook">Facebook</button>
            <button class="user__button user__button--instagram">Instagram</button>
